--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "CC0-1.0",
   "productName": "Overcast",
   "dependencies": {
-    "electron": "~1.6.2",
+    "electron": "^3.0.9",
     "electron-config": "^0.2.1",
     "electron-context-menu": "^0.8.0"
   }
